[tool.poetry]
name = "multi-agent-qna"
version = "0.1.0"
description = "A production-ready, multi-agent Q&A system with RAG."
authors = ["Sittha"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
gunicorn = "^22.0.0"
langchain = "^0.1.20"
langgraph = "^0.0.48"
langchain-community = "^0.0.38"
langchain-core = "^0.1.52"
langchain-google-genai = "^1.0.4"
google-generativeai = "^0.5.4"
faiss-cpu = "^1.8.0"
pypdf = "^4.2.0"
tavily-python = "^0.3.3"
numpy = "^1.26.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-mock = "^3.12.0"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"